[package]
name = "bevy-box"
version = "1.0.0"
edition = "2024"
authors = ["Armand Burger"]

[dependencies]
bevy = { version = "0.15.3", features = ["bevy_dev_tools"] }
bevy_pancam = "0.17.0"
bevy_rapier2d = { version = "0.29.0", features = [
    "debug-render-2d",
    "parallel",
] }
fastrand = "2.3.0"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "fat"
# Enabled for profiling. Should be disabled for production builds.
# debug = true
